feat: Adds dive list
